[workspace.package]
name = "gpui-example"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "hello-world",
    "animation",
    "data-table",
    "gif-viewer",
    "gradient",
    "image-loading",
    "input",
]
resolver = "2"

[workspace.dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
anyhow = "1.0.75" 
hello-world = { path = "hello-world" }
animation = { path = "animation" }
data-table = { path = "data-table" }
gif-viewer = { path = "gif-viewer" }
gradient = { path = "gradient" }
image-loading = { path = "image-loading" }
input = { path = "input" }
rand = "0.9.0"
image = "0.24.7"
