[workspace.package]
name = "gpui-example"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "hello-world",
    "animation",
    "data-table",
    "gif-viewer",
    "gradient",
    "image-loading",
    "input",
    "on-window-close-quit",
    "opacity",
    "ownership-post",
    "painting",
    "pattern",
    "set-menus",
    "shadow",
    "text-layout",
    "text-wrapper",
    "uniform-list",
    "window",
    "window-positioning",
    "window-shadow",
    "db-mysql",
    "form-input-db"
]
resolver = "2"

[workspace.dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
anyhow = "1.0.75" 
hello-world = { path = "hello-world" }
animation = { path = "animation" }
data-table = { path = "data-table" }
gif-viewer = { path = "gif-viewer" }
gradient = { path = "gradient" }
image-loading = { path = "image-loading" }
input = { path = "input" }
on-window-close-quit = { path = "on-window-close-quit" }
opacity = { path = "opacity" }
ownership-post = { path = "ownership-post" }
painting = { path = "painting" }
pattern = { path = "pattern" }
set-menus = { path = "set-menus" }
shadow = { path = "shadow" }
text-layout = { path = "text-layout" }
text-wrapper = { path = "text-wrapper" }
uniform-list = { path = "uniform-list" }
window = { path = "window" }
window-positioning = { path = "window-positioning" }
window-shadow = { path = "window-shadow" }
db-mysql = { path = "db-mysql" }
form-input-db = { path = "form-input-db" }
mysql = "24.0.0"
rand = "0.9.0"
image = "0.24.7"
