[package]
name = "form-input-db"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
gpui = { git = "https://github.com/huacnlee/zed.git", branch = "webview" }
gpui-component = { git = "https://github.com/longbridge/gpui-component.git" }
anyhow = { workspace = true }
mysql = { workspace = true }
unicode-segmentation = "1.10"
